updated database config
Change-Id: I5f11faf304a5d1396b514f508621736c4cfe3388

--- a/config/_config.yml
+++ b/config/_config.yml
@@ -11,6 +11,10 @@ test: &test
   memcache_server: localhost
 
 production:
+  api_root: api.youversion.com
+  api_referer: web.youversion.com
+  api_version: "2.3"
+  memcache_server: memcache.youversion.com
 
 demo: *test
 staging: *test
