--- a/config/database.yml
+++ b/config/database.yml
@@ -15,7 +15,7 @@ test:
 
 production:
   <<: *common
-  host: postgres.youversion.com
+  host: db3-dfw.youversion.com
   port: 6000
   database: yv_web_production
 
