nah, back the other way
Change-Id: I95baf37ebb1eee4f317a0633da7c84228e529d1c

--- a/config/database.yml
+++ b/config/database.yml
@@ -15,7 +15,7 @@ test:
 
 production:
   <<: *common
-  host: db3-dfw.youversion.com
+  host: postgres.youversion.com
   port: 6000
   database: yv_web_production
 
