added config for production
Change-Id: I3fcde05397492dbe4f73ec3693d357d332006e81

--- a/config/database.yml
+++ b/config/database.yml
@@ -4,20 +4,22 @@ common: &common
   host: localhost
   port: 5432
   username: yv_web
+  database: yv_web_production
 
 development:
   <<: *common
-  database: yv_web_development
 
 test:
   <<: *common
   database: yv_web_test
 
+staging:
+  <<: *common
+
 production:
   <<: *common
-  host: postgres.youversion.com
+  host: postgres-web.youversion.com
   port: 6000
-  database: yv_web_production
 
 cucumber:
   <<: *test
