--- a/config/newrelic.yml
+++ b/config/newrelic.yml
@@ -3,7 +3,7 @@
 # Ruby, Java, .NET, PHP, and Python applications with deep visibility and low overhead.
 # For more information, visit www.newrelic.com.
 #
-# Generated November 21, 2011
+# Generated November 30, 2011
 #
 # This configuration file is custom generated for LifeChurch_1
 
@@ -199,7 +199,7 @@ development:
   # executed since starting the app server.
   # NOTE: There is substantial overhead when running in developer mode.
   # Do not use for production or load testing.  
-  developer_mode: false
+  developer_mode: true
   
   # Enable textmate links
   # textmate: true
