--- a/config/_config.yml
+++ b/config/_config.yml
@@ -11,7 +11,7 @@ test: &test
   memcache_server: localhost
 
 staging:
-  api_root: api.yvdev.com
+  api_root: api.youversion.com
   api_referer: web-staging.youversion.com
   api_version: "2.4"
   memcache_server: localhost
