pointing staging at production DB for real for real this time

--- a/config/_config.yml
+++ b/config/_config.yml
@@ -10,7 +10,8 @@ test: &test
   api_version: "2.4"
   memcache_server: localhost
 
-staging: *test
+staging:
+  <<: *test
   api_root: api.youversion.com
   api_referer: web-staging.youversion.com
   api_version: "2.4"
