added profile update
Change-Id: I28982b9d10a3e7fb5cb6bd29ba04df2fb21c3298

--- a/config/_config.yml
+++ b/config/_config.yml
@@ -5,7 +5,7 @@ development:
   memcache_server: localhost
 
 test: &test
-  api_root: api.web-test.yvdev.com
+  api_root: api.yvdev.com
   api_referer: web-testing.youversion.com
   api_version: "2.4"
   memcache_server: localhost
