--- a/config/_config.yml
+++ b/config/_config.yml
@@ -1,16 +1,25 @@
+common: &common
+  twitter_key: "HhYNsW1KCxFH5WeCQ3nRXQ"
+  twitter_secret: "LppBTdEyoJ3ASfPqxHz97IDW5UxpXVim2DbrqdJSrTI"
+  facebook_app_id: "105030176203924"
+  facebook_secret: "9d03678ddd8b5588c4e6c91bd996cce2"
+
 development:
+  <<: *common
   api_root: api.yvdev.com
   api_referer: web-dev.youversion.com
   api_version: "2.4"
   memcache_server: localhost
 
 test: &test
-  api_root: api.web-test.yvdev.com
+  <<: *common
+  api_root: api.yvdev.com
   api_referer: web-testing.youversion.com
   api_version: "2.4"
   memcache_server: localhost
 
 staging:
+  <<: *common
   <<: *test
   api_root: api.youversion.com
   api_referer: web-staging.youversion.com
@@ -18,6 +27,7 @@ staging:
   memcache_server: localhost
 
 production:
+  <<: *common
   api_root: api.youversion.com
   api_referer: web.youversion.com
   api_version: "2.4"
