--- a/config/_config.yml
+++ b/config/_config.yml
@@ -3,6 +3,10 @@ common: &common
   twitter_secret: "LppBTdEyoJ3ASfPqxHz97IDW5UxpXVim2DbrqdJSrTI"
   facebook_app_id: "105030176203924"
   facebook_secret: "9d03678ddd8b5588c4e6c91bd996cce2"
+  twitter_key: "jJwCaFguoe3a40fXBVWsCw"
+  twitter_secret: "Hf7dR18UjU6nuoeVTm15EQSDdR1NmbxlElS3tpFRY"
+  facebook_app_id: "214636785287293"
+  facebook_secret: "279d2af7fd1de6ed8d74a67ca9de530a"
 
 development:
   <<: *common
