--- a/config/_config.yml
+++ b/config/_config.yml
@@ -3,6 +3,7 @@ common: &common
   twitter_secret: "LppBTdEyoJ3ASfPqxHz97IDW5UxpXVim2DbrqdJSrTI"
   facebook_app_id: "105030176203924"
   facebook_secret: "9d03678ddd8b5588c4e6c91bd996cce2"
+  # www.cbailey.yvdev.com
   twitter_key: "jJwCaFguoe3a40fXBVWsCw"
   twitter_secret: "Hf7dR18UjU6nuoeVTm15EQSDdR1NmbxlElS3tpFRY"
   facebook_app_id: "214636785287293"
