trying unicorn on heroku

--- a/config/_config.yml
+++ b/config/_config.yml
@@ -39,7 +39,7 @@ staging:
   api_version: "2.4"
   memcache_server: localhost
 
-production:
+production: &production
   <<: *common
   api_root: api.youversion.com
   api_referer: web.youversion.com
@@ -47,4 +47,10 @@ production:
   memcache_server: memcache.youversion.com
 
 demo: *test
+
+production_yv:
+  <<: *production
+
+production_heroku:
+  <<: *production
 
